--- a/app/.env
+++ b/app/.env
@@ -24,7 +24,9 @@ APP_SECRET=d80af08be567a8639ad88ad9eb27d47f
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/cybermatos?serverVersion=8&charset=utf8mb4"
+# DATABASE_URL="mysql://root:@127.0.0.1:3306/cybermatos?serverVersion=8.0.27"
+DATABASE_URL="mysql://user:mdp@127.0.0.1:3306/cybermatos?serverVersion=8.0.27"
+# DATABASE_URL="mysql://springuser:password1234@192.168.71.83:3306/cybermatos"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
