deployment: Copy application and install dependencies via Ansible

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,8 +1,11 @@
 ---
 - hosts: all
-  name: Deploy
+  name: Deploy CyberMatos
   roles:
+    # Perform all the basic setup (packages, services, etc.) as root by default
     - role: base_install
       become: true
       become_method: su
-    - deploy
+    # Deploy the application as the regular user by default
+    - role: deploy_application
+      become_method: su
