--- a/ansible/roles/base_install/tasks/main.yml
+++ b/ansible/roles/base_install/tasks/main.yml
@@ -1,77 +1,6 @@
-- name: Set hostname
-  ansible.builtin.hostname:
-    name: "cybermatos-development-{{ inventory_hostname }}"
-
-- name: Set timezone to Europe/Paris
-  community.general.timezone:
-    name: "Europe/Paris"
-
-- name: Perform update
-  ansible.builtin.apt:
-    upgrade: "safe"
-
-- name: Install base APT packages
-  ansible.builtin.apt:
-    pkg:
-      - apt-transport-https
-      - ca-certificates
-      - curl
-      - gpg
-      - lsb-release
-      - software-properties-common
-
-- name: Add PHP repository
-  block:
-    - name: Add PHP repository | get GPG key
-      ansible.builtin.get_url:
-        url: https://packages.sury.org/php/apt.gpg
-        dest: /usr/share/keyrings/deb.sury.org-php.gpg
-
-    - name: Add PHP repository | add repository
-      ansible.builtin.apt_repository:
-        repo: "deb [signed-by=/usr/share/keyrings/deb.sury.org-php.gpg] https://packages.sury.org/php {{ansible_distribution_release}} main"
-        state: present
-        update_cache: yes
-
-- name: Install LEMP stack
-  ansible.builtin.apt:
-    pkg:
-      - composer
-      - mariadb-server
-      - php8.2
-      - php8.2-fpm
-      - php8.2-mysql
-      - php8.2-xml
-
-- name: Start MariaDB service
-  ansible.builtin.service:
-    name: mariadb
-    state: started
-    enabled: yes
-
-- name: Validate Composer checksum
-  ansible.builtin.get_url:
-    checksum: "sha384:55ce33d7678c5a611085589f1f3ddf8b3c52d662cd01d4ba75c0ee0459970c2200a51f492d557530c71c15d8dba01eae"
-    dest: /usr/src/
-    url: https://getcomposer.org/installer
-
-- name: Download and install Composer
-  ansible.builtin.shell: curl -sS https://getcomposer.org/installer
-  args:
-    chdir: /usr/src/
-    creates: /usr/local/bin/composer
-
-- name: Install Composer
-  ansible.builtin.shell: php installer
-  args:
-    chdir: /usr/src/
-    creates: /usr/src/composer.phar
-
-- name: Add Composer to global path
-  ansible.builtin.copy:
-    dest: /usr/local/bin/composer
-    group: root
-    mode: '0755'
-    owner: root
-    src: /usr/src/composer.phar
-    remote_src: yes
+- ansible.builtin.import_tasks:
+    file: base_packages.yml
+- ansible.builtin.import_tasks:
+    file: initial_configuration.yml
+- ansible.builtin.import_tasks:
+    file: setup_php.yml
