deployment: Install & setup MariaDB via Ansible

--- a/ansible/roles/base_install/tasks/main.yml
+++ b/ansible/roles/base_install/tasks/main.yml
@@ -3,4 +3,6 @@
 - ansible.builtin.import_tasks:
     file: initial_configuration.yml
 - ansible.builtin.import_tasks:
+    file: setup_mariadb.yml
+- ansible.builtin.import_tasks:
     file: setup_php.yml
