--- a/ansible/roles/base_install/tasks/initial_configuration.yml
+++ b/ansible/roles/base_install/tasks/initial_configuration.yml
@@ -5,3 +5,8 @@
 - name: Set timezone to Europe/Paris
   community.general.timezone:
     name: "Europe/Paris"
+
+- name: Create the 'cybermatos' user
+  ansible.builtin.user:
+    name: cybermatos
+    shell: /bin/bash
