--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -20,5 +20,8 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    # adds the dotenv:dump console command
+    Symfony\Component\Dotenv\Command\DotenvDumpCommand: ~
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
