--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,19 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
+
+    - uses: shivammathur/setup-php@2.25.0
+      with:
+        php-version: '8.2'
+
+    - name: Check Formatting
+      run: |
+        composer require --dev --working-dir=app/tools/php-cs-fixer friendsofphp/php-cs-fixer
+        app/tools/php-cs-fixer/vendor/bin/php-cs-fixer fix app
+        git -c core.fileMode=false diff --output /tmp/formatting-diff
+        if [ -s /tmp/formatting-diff ]; then
+          echo "Found formatting differences, please run 'php artisan cs-fixer'"
+          cat /tmp/formatting-diff
+          exit 1
+        fi
+        echo "Code is formatted correctly"
