Exclude vendor, var, and tools directories from formatting

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
     - 'master'
 
 jobs:
-  build:
+  check-formatting:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,13 +20,19 @@ jobs:
       with:
         php-version: '8.2'
 
+    - name: Install PHP CS Fixer
+      working-directory: app
+      run: composer require --dev --working-dir=tools/php-cs-fixer friendsofphp/php-cs-fixer
+
+    - name: Run Formatter
+      working-directory: app
+      run: ./tools/php-cs-fixer/vendor/bin/php-cs-fixer fix
+
     - name: Check Formatting
       run: |
-        composer require --dev --working-dir=app/tools/php-cs-fixer friendsofphp/php-cs-fixer
-        app/tools/php-cs-fixer/vendor/bin/php-cs-fixer fix app
         git -c core.fileMode=false diff --output /tmp/formatting-diff
         if [ -s /tmp/formatting-diff ]; then
-          echo "Found formatting differences, please run 'php artisan cs-fixer'"
+          echo "Found formatting differences, please run 'tools/php-cs-fixer/vendor/bin/php-cs-fixer fix' in the app directory and commit the changes"
           cat /tmp/formatting-diff
           exit 1
         fi
