--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,25 @@ jobs:
           exit 1
         fi
         echo "Code is formatted correctly"
+
+  run-tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - uses: shivammathur/setup-php@2.25.0
+        with:
+          php-version: '8.2'
+
+      - name: Create Test Database
+        working-directory: app
+        run: |
+          composer install
+          php bin/console doctrine:database:create --env=test
+          php bin/console doctrine:schema:create --env=test
+
+      - name: Run Tests
+        working-directory: app
+        run: ./bin/phpunit
