Add the `/api/register` route
Add the User and AccessToken entities

Closes #15

--- a/app/.env
+++ b/app/.env
@@ -18,3 +18,7 @@ APP_ENV=dev
 APP_SECRET=APP_SECRET
 DATABASE_URL=DATABASE_URL
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
