--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -8,7 +8,7 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\User
-                property: email
+                property: login
         # used to reload user from session & other features (e.g. switch_user)
     firewalls:
         dev:
@@ -31,8 +31,11 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api/register, roles: PUBLIC_ACCESS }
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/products, roles: PUBLIC_ACCESS }
+        - { path: '^/api/products/{productId}', roles: PUBLIC_ACCESS }
+        - { path: ^/api/, roles: ROLE_USER }
 
 when@test:
     security:
