--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
     - uses: shivammathur/setup-php@2.25.0
       with:
         php-version: '8.2'
+        coverage: none
 
     - name: Install PHP CS Fixer
       working-directory: app
@@ -48,6 +49,7 @@ jobs:
       - uses: shivammathur/setup-php@2.25.0
         with:
           php-version: '8.2'
+          coverage: xdebug
 
       - name: Create Test Database
         working-directory: app
@@ -58,4 +60,10 @@ jobs:
 
       - name: Run Tests
         working-directory: app
-        run: ./bin/phpunit
+        run: ./bin/phpunit --coverage-clover ./coverage.xml
+
+      - name: Upload Coverage Data
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./app/coverage.xml
