--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 ###> symfony/framework-bundle ###
 /app/.env.local
+/app/.env.test
 /app/.env.local.php
 /app/.env.*.local
 /app/config/secrets/prod/prod.decrypt.private.php
